--- a/index.html
+++ b/index.html
@@ -23,9 +23,8 @@
             <img src=".\images\profile.jpg" width="200px" alt="Profile Photo">
             <h1>Mr. Jared Cheney</h1>
             <p>Software Engineer, Chemist</p>
-            <p>I have graduated Dordt University with a B.S in Chemisty.
-                I am currently working towards a Software Engineering Degree at Iowa State University.
-                I have 4 Semesters left at Iowa State University </p>
+            <p>I have graduated Dordt University with a B.S in Chemisty. I am currently working towards a Software
+                Engineering Degree at Iowa State University. I have 4 Semesters left at Iowa State University </p>
         </div>
     </section>
     <section id="projects">
@@ -39,8 +38,9 @@
             <div class="project">
                 <img src="./images/project2.png" alt="Project 2">
                 <h3>Project 2</h3>
-                <p>For a ISU Hackathon, I've help created a student class planer using the ISU directory.
-                    It is called CyPlan and you can find it here...
+                <p>For a 24 hour ISU Hackathon, I've help created a student class planer using the ISU directory. It is
+                    called CyPlan and you can find it here
+                    <link href="https://www.cy-plan.com/">
                 </p>
             </div>
         </div>
@@ -49,11 +49,11 @@
         <div class="container">
             <h2>Contact Me</h2>
             <p>You can reach me at jachen24@iastate.edu</p>
-            </div>
+        </div>
     </section>
     <footer>
         <p>&copy; 2025 Jared Cheney</p>
-        </footer>
+    </footer>
 </body>
 
 </html>
