--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class="container">
             <img src=".\images\profile.jpg" width="200px" alt="Profile Photo">
             <h1>Mr. Jared Cheney</h1>
-            <p>Software Engineer, Chemist</p>
+            <p style="font-family: 'Courier New', Courier, monospace; color: brown">Software Engineer, Chemist</p>
             <p>I have graduated Dordt University with a B.S in Chemisty. I am currently working towards a Software
                 Engineering Degree at Iowa State University. I have 4 Semesters left at Iowa State University </p>
         </div>
@@ -33,14 +33,16 @@
             <div class="project">
                 <img src="./images/project1.png" alt="Project 1">
                 <h3>Project 1</h3>
-                <p>My senior project for chemistry was... you can look at it here...</p>
+                <p>My senior project for chemistry was to synthesize <em>Solanine</em> so that it can be used for lab
+                    tests on cancer treatment. you can look at the project here <a
+                        href=./docs/Synthesis%20of%20Glycoalkaloids.pdf>To Synthesis of Solanine</a></p>
             </div>
             <div class="project">
                 <img src="./images/project2.png" alt="Project 2">
                 <h3>Project 2</h3>
-                <p>For a 24 hour ISU Hackathon, I've help created a student class planer using the ISU directory. It is
+                <p>For a 24 hour ISU Hackathon, I've help create a student class planer using the ISU directory. It is
                     called CyPlan and you can find it here
-                    <link href="https://www.cy-plan.com/">
+                    <a href="https://www.cy-plan.com/">To CyPlan</a>
                 </p>
             </div>
         </div>
