--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                         href=./docs/Synthesis%20of%20Glycoalkaloids.pdf>To Synthesis of Solanine</a></p>
             </div>
             <div class="project">
-                <img src="./images/project2.png" alt="Project 2">
+                <img src="./images/project2.png" width="200xp" alt="Project 2">
                 <h3>Project 2</h3>
                 <p>For a 24 hour ISU Hackathon, I've help create a student class planer using the ISU directory. It is
                     called CyPlan and you can find it here
