--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <img src=".\images\profile.jpg" width="200px" alt="Profile Photo">
             <h1>Mr. Jared Cheney</h1>
             <p style="font-family: 'Courier New', Courier, monospace; color: brown">Software Engineer, Chemist</p>
-            <p>I have graduated Dordt University with a B.S in Chemisty. I am currently working towards a Software
+            <p>I graduated Dordt University with a B.S in Chemisty. I am currently working towards a Software
                 Engineering Degree at Iowa State University. I have 4 Semesters left at Iowa State University </p>
         </div>
     </section>
@@ -34,7 +34,7 @@
                 <img src="./images/project1.png" alt="Project 1">
                 <h3>Project 1</h3>
                 <p>My senior project for chemistry was to synthesize <em>Solanine</em> so that it can be used for lab
-                    tests on cancer treatment. you can look at the project here <a
+                    tests on cancer treatment. You can look at the project here <a
                         href=./docs/Synthesis%20of%20Glycoalkaloids.pdf>To Synthesis of Solanine</a></p>
             </div>
             <div class="project">
